Bug 1157400 - Part1: port chromium XP wifi scanning code. r=mcmanus